# adcraft

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test.txt  tox.ini
.github/: CODEOWNERS
.github/workflows/: create-python-release.yml  lint-python.yml  test-python.yml
adcraft/: __init__.py  bidding_simulation.py  gymnasium_kw_env.py  gymnasium_kw_utils.py  synthetic_kw_classes.py  synthetic_kw_helpers.py
adcraft/RL/: train_agent.ipynb
adcraft/appendix_bidding_outcomes_example/: manual_bidding_example.ipynb
adcraft/baseline_experiment_and_figs_notebooks/: heatmap_experiments_figs.ipynb  run_heatmap_experiments.ipynb  timing_and_other_one_off_experiments.ipynb
adcraft/baselines/: __init__.py  interpolated_expectations.py
adcraft/experiment_utils/: __init__.py  agent_configs.py  example_compute_metrics.ipynb  experiment_configs.py  experiment_metrics.py  experiment_quantiles.py
adcraft/multi_agent/: __init__.py  env.py  train.py
adcraft/pull_quantiles_data/: __init__.py  quantiles_to_keywords.py
adcraft/tests/: test_env.py  test_gymnasium_kw_utils.py  test_package.py  test_synthetic_kw_helpers.py
adcraft/tests/multi_agent/: test_env.py
adcraft/tests/rust/: test_helpers.py  test_numpy_funcs.py
adcraft/visualization/: __init__.py  jupyter_functions.py
adcraft/wrappers/: __init__.py  flat_array.py
src/: lib.rs
